Updated fx installation